# SVVT-TermProject

./: .pre-commit-config.yaml  LICENSE  README.md  averages.txt  pyproject.toml  setup.cfg
svvt/: avg_utils.py  main.py  parser.py  sahibinden.py  screen_shot.py  utils.py
tests/: test_svvt.py
