[tool.poetry]
name = "svvt"
version = "0.1.0"
description = ""
authors = ["Mehmet Fatih Okuyan <okuyanf6161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.22.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
