[tool.poetry]
name = "svvt"
version = "0.1.0"
description = ""
authors = ["Mehmet Fatih Okuyan <okuyanf6161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.22.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
pyupgrade = "^2.32.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"
mypy = "^0.950"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
